# Vulnbuster

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cve_mapper.py  dashboard.env  demo_aws_scanner.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test.apk  test_advanced_xss.py  test_aws_scanner_manual.py
.github/workflows/: ci-cd.yml  ci.yml
ai/: ai_bridge.py  ai_gadget_suggester.py  ai_shell.py  custom_runner.py  exploit_simulator.py  memory.py  poc_builder.py  prompt_tuner.py  self_diagnostic.py  via_engine.py
api/: plugin_interface.py
audit/: __init__.py  audit_recorder.py  playback.py
binex/: entropy.py  rop_chain_builder.py  static_analyzer.py
bypass/: waf_engine.py
config/: config.json  scan_profiles.json
core/: aee_engine.py  ai.py  analyzer.py  chain.py  csrf.py  discover.py  exploit_chain_executor.py  flow_renderer.py  payload_diff.py  payload_learning.py  payloads.py  plugin_loader.py  poc_builder.py  repl_interface.py  reporter.py  rule_engine.py  scanner.py  session.py  shellgen.py  utils.py  vuln_replay.py  waf_bypass.py  wordlist_autoexpander.py  wordlistgen.py
ctf_modules/: ctf_challenges.py
docs/: __init__.py  api-reference.md  cloud_security_domain.md  cloud_security_gaps.md  getting-started.md  index.md  iot_security_domain.md  iot_security_gaps.md  mobile_security_domain.md  mobile_security_gaps.md  project_analysis_summary.md  reporter_guide.md  structure.md  user-guide.md  web_security_domain.md
docs/developer-guide/: api-reference.md  architecture.md  plugin-development.md  testing.md
docs/migration/: scanner_v2.md
docs/user-guide/: ai-analysis.md  cloud-scanning.md  mobile-analysis.md  web-scanning.md
dynamic/: frida_runner.py
evasion/: header_cloak.py  timing_obfuscator.py
examples/: __init__.py  mobile_analysis_demo.py  reporter_demo.py
examples/plugins/: sample_scanner.py
integrations/: exploit_webhook.py  webhooks.py
intel/: company_mapper.py  osint_pack.py
kb/: core_index.py
memory/: __init__.py  ai_memory.py
modes/android/: __init__.py  scanner.py
modes/android/modules/: static_analyzer.py
modes/android/templates/: report.html.j2  summary.md.j2
modes/cloud/: scanner.py
modes/cloud/modules/: aws_scanner.py  kubernetes_scanner.py  security_hub_integration.py
modes/edge/: scanner.py
modes/ios/: scanner.py
modes/iot/: scanner.py
modes/mobile/: __init__.py  advanced_analysis.py  advanced_hooks.py  ai_analyzer.py  ai_model_trainer.py  ai_training.py  android_scanner.py  bugbounty_agent.py  bugbounty_toolkit.py  dynamic_analyzer.py  exploits.py  frida_manager.py  ios_scanner.py  platform_checks.py  scanner.py  train_ai_model.py  utils.py
modes/web/: ai_custom_rule_assistant.py  ai_fuzzer.py  auto_remediator.py  crawler.py  dynamic_analyzer.py  exploit_chain_analyzer.py  oob_manager.py  scanner.py
modes/web/modules/: advanced_xss.py  bac.py  clickjacking.py  cmdinj.py  cors.py  csrf.py  dom_xss.py  header_injection.py  idor.py  lfi.py  mfa_bypass.py  redirect.py  sqli.py  ssti.py  upload.py  websocket.py  xss.py  xxe.py
modes/web/payloads/: lfi.json  sqli.json  xss.json
modes/web/templates/: report_template.html
modes/windows/: scanner.py
modules/: dom_xss.py  exploitdb_finder.py  fingerprint.py  git_leaks.py  graphql.py  header_injection.py  jwt_analyzer.py  lfi_exploiter.py  pollution.py  ssrf.py  subdomain_brute.py  subdomain_takeover.py  template_injection.py  upload_path_brute.py
modules/android/: content_provider_checker.py  dex_opcode_analyzer.py
modules/cloud/: functions.py  iam_escalation.py
modules/iot/: default_creds.py  firmware_static.py
modules/network/: tls_analyzer.py
modules/web/: cors_scanner.py  js_function_scanner.py
modules/windows/: applocker_bypass.py  lsass_analyzer.py
network/: portscan.py
oob/: dns_listener.py  http_listener.py  webhook_listener.py
optimizer/: scan_tuner.py
payloads/: mutators.py
plugins/: plugin_loader.py  plugin_template.py
post_exploitation/: auto_shell_uploader.py  db_enum.py  shell_verifier.py  shellcheck.py  sqli_enum.py  xss_webhook.py
prompts/: template_poc.j2
recon/: api_intel.py
reports/: android_test_20250708_052135.json  android_test_20250708_052135.txt  android_test_20250708_052204.json  android_test_20250708_052204.txt  vulnbuster_report_20250708_045311.json  vulnbuster_report_20250708_045311.md  vulnbuster_report_20250708_051352.json  vulnbuster_report_20250708_051352.md  vulnbuster_report_20250708_052135.json  vulnbuster_report_20250708_052135.md  vulnbuster_report_20250708_052204.html  vulnbuster_report_20250708_052204.json  vulnbuster_report_20250708_052204.md  webblood_report_20250708_040817.html  webblood_report_20250708_040817.json  webblood_report_20250708_040817.md  webblood_report_20250708_040920.html  webblood_report_20250708_040920.json  webblood_report_20250708_040920.md
scripts/: ci_cd_runner.py  train_ai_model.py
templates/: report_pentest.html.j2  web_report.html.j2  web_summary.md.j2
test_apk/: AndroidManifest.xml  classes.dex
test_apk/res/values/: strings.xml
tests/: __init__.py  conftest.py  test_advanced_xss.py  test_ai_suggestor_simple.py  test_aws_scanner.py  test_graphql_ai_fuzzer.py  test_graphql_fuzzer_integration.py  test_graphql_mutators.py  test_mobile_platform_checks.py
vscode/: README.md
vulnbuster/: __main__.py
vulnbuster/config/: __init__.py
vulnbuster/core/: __init__.py
vulnbuster/interfaces/: __init__.py  enhanced_plugin.py  enhanced_reporter.py  enhanced_scanner.py  http_client.py  plugin.py  reporter.py  scanner.py
vulnbuster/modules/graphql/: README.md  __init__.py  ai_suggestor.py  client.py  fuzzer.py  mutators.py  scanner.py  utils.py
vulnbuster/modules/mfa/: __init__.py
vulnbuster/modules/openapi/: __init__.py
vulnbuster/tests/: __init__.py  conftest.py
vulnbuster/tests/test_reporters/: __init__.py  test_base.py  (+3 more)
webui/: dashboard.py
wordlists/: android_Unknown.txt
